objects/Titulos__c.object
<CustomObject>
    <fields>
        <fullName>AN8__c</fullName>
        <formula>IF($RecordType.DeveloperName=&apos;BRA_Standard&apos; || $RecordType.DeveloperName=&apos;Standard_AR&apos; || $RecordType.DeveloperName=&apos;Standard_UY&apos; , Cliente__r.Client_country_AN8__c, &apos;&apos;)</formula>
        <label>AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualDeliveryDate_AR__c</fullName>
        <description>Actual delivery date provided by Logistics via interface to JDE</description>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Títulos em aberto</relationshipLabel>
        <relationshipName>Titulos_de_cobranca</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConfirmationStatus_AR__c</fullName>
        <description>Delivery status provided by Logistics via interface to JDE</description>
        <label>Confirmation Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryNote_AR__c</fullName>
        <description>Number of Delivery Note (legal document called &quot;Remito&quot;) for Argentina</description>
        <label>Delivery Note</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_id_pk__c</fullName>
        <externalId>true</externalId>
        <label>Internal_id_pk</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_AR_TypeDescription__c</fullName>
        <formula>if( tipoDocumento__c ==&apos;FA&apos;,&apos;FACTURA&apos;,
   if(OR(tipoDocumento__c ==&apos;D2&apos;,tipoDocumento__c ==&apos;D3&apos;), &apos;CHEQUE RECHAZADO&apos;,
     if(OR(tipoDocumento__c ==&apos;RU&apos;,tipoDocumento__c ==&apos;R1&apos;), &apos;DEPÓSITO&apos;,
        if(OR(tipoDocumento__c ==&apos;RU&apos;,tipoDocumento__c ==&apos;R1&apos;), &apos;DEPÓSITO&apos;,
           if(OR(tipoDocumento__c ==&apos;A1&apos;,tipoDocumento__c ==&apos;A2&apos;,tipoDocumento__c ==&apos;C6&apos;,tipoDocumento__c ==&apos;C5&apos;), &apos;NOTA DE CRÉDITO&apos;,
              if(OR(tipoDocumento__c ==&apos;D6&apos;,tipoDocumento__c ==&apos;D7&apos;), &apos;NOTA DE DÉBITO&apos;, &apos;&apos;)
           ) 
     )
 )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Documento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_OverdueDaysFormula__c</fullName>
        <formula>IF(OR( tipoDocumento__c!=&apos;FA&apos; ,dataVencimentoAtual__c &gt;= TODAY()),0,(dataVencimentoAtual__c - TODAY())*(-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de Vencido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegalInvoice_AR__c</fullName>
        <description>Selling legal document (Invoice, Debit &amp; Credit Notes, etc.  There is a fortmat for each document type / country.</description>
        <label>Legal Invoice</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetOpenBalance1_AR__c</fullName>
        <label>Net Open Balance1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetOpenBalance_AR__c</fullName>
        <description>Net outstanding balance considering receipts generated in SF not recorded yet in JDE</description>
        <formula>valorSaldo__c -  NetSRReceipts_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetSRReceipts_AR__c</fullName>
        <description>Amount of receipts not recorded yet in JDE</description>
        <label>Receipts pending in SF</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderNumber_AR__c</fullName>
        <description>JDE Order Number (for Invoices)</description>
        <label>Order Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderType_AR__c</fullName>
        <description>JDE Order Type (for Invoices)</description>
        <label>Order Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentID_AR__c</fullName>
        <description>To match the deposits in collection accounts with RU (for the interface with JDE)</description>
        <label>Payment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiptNumber_AR__c</fullName>
        <description>Field to inform Receipt number to Values type &quot;RU&quot; (deposits in collection accounts). Value to avoid the inclusion of RU values in more than one receipt.</description>
        <label>Receipt Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ruinusebypendingreceipt_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up with Receipts to validate an RU is not used in more than one Receipt.</description>
        <label>RU in use by pending receipt</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipLabel>Títulos em aberto</relationshipLabel>
        <relationshipName>T_tulos_em_aberto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inadimplente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>codigoCia__c</fullName>
        <label>Código companhia</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataEmissao__c</fullName>
        <label>Data emissão</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dataVencimentoAtual__c</fullName>
        <label>Data vencimento</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dataVencimentoOriginal__c</fullName>
        <label>Data venc. original</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diasAtraso__c</fullName>
        <label>Dias atraso</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numeroDocumento__c</fullName>
        <label>No. documento</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>observacoesTitulo__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>parcela__c</fullName>
        <label>Parcela</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tipoDocumento__c</fullName>
        <label>Tipo documento</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>valorOriginalTitulo__c</fullName>
        <label>Valor original título</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>valorSaldo__c</fullName>
        <label>Valor Saldo</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Título em aberto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AN8__c</columns>
        <columns>Cliente__c</columns>
        <columns>valorOriginalTitulo__c</columns>
        <columns>valorSaldo__c</columns>
        <columns>LegalInvoice_AR__c</columns>
        <columns>Internal_id_pk__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Titulo_em_Aberto_Argentina</fullName>
        <columns>NAME</columns>
        <columns>AN8__c</columns>
        <columns>Cliente__c</columns>
        <columns>dataEmissao__c</columns>
        <columns>dataVencimentoOriginal__c</columns>
        <columns>dataVencimentoAtual__c</columns>
        <columns>diasAtraso__c</columns>
        <columns>Status__c</columns>
        <columns>Internal_id_pk__c</columns>
        <columns>numeroDocumento__c</columns>
        <columns>parcela__c</columns>
        <columns>valorSaldo__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id_pk__c</field>
            <operation>startsWith</operation>
            <value>6-</value>
        </filters>
        <filters>
            <field>tipoDocumento__c</field>
            <operation>equals</operation>
            <value>RU</value>
        </filters>
        <label>Titulo em Aberto Argentina</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Titulo_em_Aberto_Brasil</fullName>
        <columns>NAME</columns>
        <columns>AN8__c</columns>
        <columns>Cliente__c</columns>
        <columns>dataEmissao__c</columns>
        <columns>dataVencimentoOriginal__c</columns>
        <columns>dataVencimentoAtual__c</columns>
        <columns>diasAtraso__c</columns>
        <columns>Status__c</columns>
        <columns>Internal_id_pk__c</columns>
        <columns>numeroDocumento__c</columns>
        <columns>parcela__c</columns>
        <columns>valorSaldo__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id_pk__c</field>
            <operation>startsWith</operation>
            <value>1-</value>
        </filters>
        <label>Titulo em Aberto Brasil</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Titulo_em_Aberto_Uruguay</fullName>
        <columns>NAME</columns>
        <columns>AN8__c</columns>
        <columns>Cliente__c</columns>
        <columns>dataEmissao__c</columns>
        <columns>dataVencimentoOriginal__c</columns>
        <columns>dataVencimentoAtual__c</columns>
        <columns>diasAtraso__c</columns>
        <columns>Status__c</columns>
        <columns>Internal_id_pk__c</columns>
        <columns>numeroDocumento__c</columns>
        <columns>parcela__c</columns>
        <columns>valorSaldo__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id_pk__c</field>
            <operation>startsWith</operation>
            <value>5-</value>
        </filters>
        <label>Titulo em Aberto Uruguay</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Titulos_Mexico</fullName>
        <columns>NAME</columns>
        <columns>numeroDocumento__c</columns>
        <columns>Cliente__c</columns>
        <columns>dataEmissao__c</columns>
        <columns>tipoDocumento__c</columns>
        <columns>dataVencimentoAtual__c</columns>
        <columns>dataVencimentoOriginal__c</columns>
        <columns>diasAtraso__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AN8__c</field>
            <operation>startsWith</operation>
            <value>12-</value>
        </filters>
        <label>Titulo em aberto Mexico</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>b2b</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>LAT_AR_TypeDescription__c</columns>
        <columns>LegalInvoice_AR__c</columns>
        <columns>dataEmissao__c</columns>
        <columns>dataVencimentoAtual__c</columns>
        <columns>LAT_OverdueDaysFormula__c</columns>
        <columns>valorOriginalTitulo__c</columns>
        <columns>valorSaldo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id_pk__c</field>
            <operation>startsWith</operation>
            <value>6-</value>
        </filters>
        <filters>
            <field>tipoDocumento__c</field>
            <operation>notEqual</operation>
            <value>RU</value>
        </filters>
        <filters>
            <field>tipoDocumento__c</field>
            <operation>notEqual</operation>
            <value>R1</value>
        </filters>
        <filters>
            <field>tipoDocumento__c</field>
            <operation>notEqual</operation>
            <value>AA</value>
        </filters>
        <label>b2b</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Número do título em aberto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Títulos em aberto</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_TEA_Standard</fullName>
        <active>true</active>
        <description>Standard record type for MX</description>
        <label>MX Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>